# alert_processing_research

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
scripts/: test.py
utils/: charger_donnees.py  compter_alertes.py
